--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,8 @@ flutter:
   uses-material-design: true
 
   assets:
-    - images/
+    - images/background_images/
+    - images/weather_icons/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
